# func-python

./: .gitignore  CHANGELOG.md  OWNERS  README.md  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
cmd/fcloudevent/: README.md  main.py
cmd/fhttp/: README.md  main.py
src/func_http/: README.md  http.py
src/func_python/: _ulimit.py  cloudevent.py  example.py  http.py  sock.py
tests/: test_cloudevent.py  test_http.py  test_ulimit.py
