[tool.poetry]
name = "func-python"
version = "0.2.0"
description = "Knative Functions Python Middleware"
authors = ["Luke Kingland <luke@lukekingland.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/knative-extensions/func-python"

[tool.poetry.dependencies]
python = "^3.12"
hypercorn = "^0.17.3"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
httpx = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
