[tool.poetry]
name = "func-python"
version = "0.6.0"
description = "Knative Functions Python Middleware"
authors = ["The Knative Authors <knative-dev@googlegroups.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/knative-extensions/func-python"

[tool.poetry.dependencies]
python = "^3.8"
hypercorn = "^0.17.3"
cloudevents = "^1.11.0"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
httpx = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
